Fixed navbar Button on mobile

--- a/style.css
+++ b/style.css
@@ -123,9 +123,9 @@
   }
 
   .header {
-    height: 6.5vh;
+    height: 60px !important;
     font-size: 11px !important;
-    line-height: 26px !important;
+    line-height: 12px !important;
   }
 
   .header-img {
@@ -175,14 +175,16 @@
   }
 
   #wiki {
-    height: 30px !important;
-    font-size: 11px !important;
-    line-height: 9px !important;
-    padding: 9.75px !important;
-  }
+    height: 35px !important;
+    font-size: 12px !important;
+    line-height: 30px !important;
+    padding: 1px !important;
+    padding-inline: 10px !important;
+}
 
   .issues {
     margin-right: 19px;
+    font-size: 12px;
   }
 
   .display-2 {
@@ -191,7 +193,7 @@
   }
 
   .text-muted {
-    font-size: 11px;
+    font-size: 12px;
   }
 
   .scroll-to {
@@ -223,13 +225,11 @@
   }
 
   .header {
-    grid-template-columns: 40px auto 0px 0px 0px 70px 130px !important;
+    grid-template-columns: 40px auto 0px 0px 0px 50px 100px !important;
   }
   .hidenav {
-    display: none !important;
-  }
-  .btn {
-    width: 100px;
+    opacity: 0 !important;
+    pointer-events: none;
   }
 
   .menu {
@@ -314,7 +314,7 @@ body {
 }
 
 .header {
-  padding: 1rem;
+  padding-inline: 1rem;
   max-width: 1136px;
   background-color: #161b22;
   position: relative;
@@ -329,7 +329,7 @@ body {
 
 .devider {
   width: 1px;
-  height: 100%;
+  height: 60%;
   background-color: #21262d;
 }
 
